--- a/client/src/components/questions/questions.css
+++ b/client/src/components/questions/questions.css
@@ -3,9 +3,6 @@
 }
 
 /* Header */
-.question__header {
-  margin-bottom: 1rem;
-}
 .question__header h1 {
   font-size: 2rem;
   font-weight: 500;
@@ -17,28 +14,15 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin: 1rem 0;
-  border-top: 1.5px solid var(--gray);
   border-bottom: 1.5px solid var(--gray);
-  padding: 1rem 0 1rem 6rem;
-  cursor: pointer;
-}
-.question__card--data {
-  text-align: right;
-  font-size: 0.8rem;
-  margin-right: 1rem;
-  width: 5rem;
-  opacity: 0.8;
-  color: var(--placeholder);
-}
-.question__card--data p {
-  margin-bottom: 0.3rem;
+  padding: 1rem 0 1rem;
 }
 
 /* Content */
 .question__card--content {
   opacity: 0.9;
   width: 100%;
+  cursor: pointer;
 }
 .question__card--title {
   color: var(--blue);
