--- a/client/src/pages/profile/profile.css
+++ b/client/src/pages/profile/profile.css
@@ -1,13 +1,89 @@
 .profile__wrapper {
-  padding: 2rem 2rem;
+  display: flex;
+  text-align: left;
+  flex-direction: column;
+  margin-top: 2rem;
+  padding: 0 5rem;
 }
 
 /* Header */
 .profile__header {
+  width: 100%;
+  margin-bottom: 1rem;
+  padding: 1rem 0;
   border-bottom: 1.5px solid var(--gray);
 }
 .profile__header h1 {
   font-size: 2rem;
+  font-family: 'Vollkorn', serif;
   font-weight: 500;
   margin-bottom: 1rem;
+}
+.profile__header h1::first-letter {
+  text-transform: capitalize;
+}
+.profile__sort {
+  display: flex;
+  flex-direction: row;
+}
+.profile__sort p {
+  margin-right: 1rem;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+.profile__sort p:hover {
+  opacity: 0.8;
+}
+.profile__sort p:active {
+  transform: scale(0.97);
+}
+
+/* Body */
+.profile__card {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border-bottom: 1.5px solid var(--gray);
+  padding: 1rem 0 1rem;
+}
+.profile__card--content {
+  opacity: 0.9;
+  width: 100%;
+}
+.profile__card--title {
+  color: var(--blue);
+}
+.profile__card--title h1 {
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+.profile__card--title::first-letter,
+.profile__card--body::first-letter {
+  text-transform: capitalize;
+}
+.profile__card--body {
+  margin: 0.5rem 0;
+  font-size: 0.9rem;
+  text-align: justify;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+.profile__card--footer {
+  display: flex;
+  font-size: 0.8rem;
+  justify-content: space-between;
+}
+.profile__footer--timestamp,
+.profile__footer--icons {
+  display: flex;
+  flex-direction: row;
+}
+.profile__footer--timestamp p {
+  margin-right: 1rem;
+}
+.profile__footer--timestamp span {
+  font-weight: 600;
 }
