--- a/client/src/components/questions/questions.css
+++ b/client/src/components/questions/questions.css
@@ -51,3 +51,13 @@
   color: var(--blue);
   margin-right: 0.5rem;
 }
+
+/* Media Queries */
+@media screen and (min-width: 281px) and (max-width: 767px) {
+  /* From question folder */
+  /* Wrapper */
+  .question__wrapper {
+    margin-top: 2rem;
+    padding: 0;
+  }
+}
