--- a/client/src/pages/profile/profile.css
+++ b/client/src/pages/profile/profile.css
@@ -45,6 +45,10 @@
   align-items: center;
   border-bottom: 1.5px solid var(--gray);
   padding: 1rem 0 1rem;
+  transition: all 0.2s ease-in-out;
+}
+.profile__card:hover {
+  transform: scale(1.0009);
 }
 .profile__card--content {
   opacity: 0.9;
@@ -103,6 +107,10 @@
 .question__answer--card {
   border-bottom: 1.5px solid var(--gray);
   padding: 1rem 0;
+  transition: all 0.2s ease-in-out;
+}
+.question__answer--card:hover {
+  transform: scale(1.0009);
 }
 .question__answer--body p {
   font-size: 0.9rem;
@@ -125,4 +133,12 @@
 }
 .bsTrash:active {
   transform: scale(0.9);
+}
+
+/* Media Queries */
+@media screen and (min-width: 280px) and (max-width: 768px) {
+  /* Wrapper */
+  .profile__wrapper {
+    padding: 0 1rem;
+  }
 }
