--- a/client/src/pages/register/register.css
+++ b/client/src/pages/register/register.css
@@ -2,11 +2,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
   padding: 4rem;
 }
 
 /* Form */
+.register__form--wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 .register__form {
   display: flex;
   flex-direction: column;
@@ -108,4 +113,43 @@
 .register__link--login h1 span {
   color: var(--blue);
   cursor: pointer;
+}
+
+/* Media Queries */
+@media screen and (max-width: 280px) {
+  .register__wrapper {
+    padding: 0rem;
+  }
+
+  /* Form */
+  .register__form {
+    height: 50vh;
+    width: 80vw;
+    margin-top: 2rem;
+  }
+}
+@media screen and (min-width: 281px) and (max-width: 539px) {
+  /* Form */
+  .register__form {
+    height: 50vh;
+    width: 80vw;
+  }
+}
+
+@media screen and (min-width: 540px) and (max-width: 767px) {
+  /* Form */
+  .register__form {
+    height: 50vh;
+    width: 45vw;
+    margin-top: 4rem;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  /* Form */
+  .register__form {
+    height: 35vh;
+    width: 45vw;
+    margin-top: 4rem;
+  }
 }
